Update contact page layout and logo source

--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,7 @@
 <body>
 
   <header>
-    <img src="logo.png" alt="Logo de la página" class="logo">
+    <img src="../img/ChatGPT Image 13 nov 2025, 12_38_45.png" alt="Logo de la página" class="logo">
     <h1 class="titulo">CACHICAR</h1>
   </header>
 
@@ -73,3 +73,4 @@
   </table>
 </body>
 </html>
+
