Cambios en Css y subida de Contacto

--- a/contacto.html
+++ b/contacto.html
@@ -4,17 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contacto</title>
-  <link rel="stylesheet" href="style.ec.css">
+  <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
 
-  <header>
-    <img src="../img/ChatGPT Image 13 nov 2025, 12_38_45.png" alt="Logo de la página" class="logo">
-    <h1 class="titulo">CACHICAR</h1>
-  </header>
+    <header>  
+        <nav>
+            <div class="div_del_header">
+                <img src="../img/ChatGPT Image 13 nov 2025, 12_38_45.png" alt="lOGO" width="200">
+
+                <a href="index.html">Inicio</a></li>
+                <a href="../html/Comprar_coche.html">Comprar coches</a>
+                <a href="Vender_coche.html">Vender mi coche</a>
+                <a href="contacto.html">Contacto</a>
+            </div>    
+        </nav>
+    </header>
 
 
   <main>
+      <div class="contacto-texto">
     <h2> CONTACTO Y HORARIOS</h2>
     <h3> 
         <p>Para ponerse en contacto nuestro numero de telefono es: 673676767</p>
@@ -24,6 +33,7 @@
   </main>
 
   <h2>Horarios de atencion</h2>
+    <div class="contacto-texto">
   <table>
     <thead>
       <tr>
