--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta author="">
-    <title>Esqueleto</title>
+    <title>Cachicar</title>
     <link type="text/css" rel="stylesheet" href="../css/estilo.css">
     <link rel="icon" href="../img/ChatGPT Image 13 nov 2025, 12_38_45.png" type="Image">
 </head>
@@ -16,10 +16,10 @@
             <div class="div_del_header">
                 <img src="../img/ChatGPT Image 13 nov 2025, 12_38_45.png" alt="lOGO" width="200">
 
-                <a href="index.html">Inicio</a></li>
-                <a href="../html/Comprar_coche.html">Comprar coches</a>
-                <a href="Vender_coche.html">Vender mi coche</a>
-                <a href="contacto.html">Contacto</a>
+                <a href="../html/index.html">Inicio</a></li>
+                <a href="../html/Servicio.html">Servicios</a>
+                <a href="../html/equipo.html">Equipo</a>
+                <a href="../html/contacto.html">Contacto</a>
             </div>    
         </nav>
     </header>
@@ -41,7 +41,7 @@
             con un servicio profesional y transparente. ¡Ven y descubre por qué somos tu concesionario de confianza!</p>
             
             <!--Boton de ver todos los coches-->
-            <a href="#vehiculos" style="display:inline-block; margin-top:30px; background-color:#fff; color:#111; padding:12px 25px; border-radius:8px; text-decoration:none; font-weight:bold; transition:0.3s;">
+            <a href="../html/vehiculos.html" style="display:inline-block; margin-top:30px; background-color:#fff; color:#111; padding:12px 25px; border-radius:8px; text-decoration:none; font-weight:bold; transition:0.3s;">
             Ver vehículos disponibles
             </a>
             </section>
