Codigo corregido y perfeeee

--- a/Servicio.html
+++ b/Servicio.html
@@ -4,25 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios - CACHI CAR</title>
-    <link type="text/css" rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="estilo.css">
     <link rel="icon" href="../img/ChatGPT Image 13 nov 2025, 12_38_45.png" type="Image">
 </head>
 <body>
 
-<header>  
-    <nav>
-        <div class="div_del_header">
-            <a href="../html/index.html">
-                <img src="../img/ChatGPT Image 13 nov 2025, 12_38_45.png" alt="LOGO" width="200">
-            </a>
+    <header>  
+        <nav>
+            <div class="div_del_header">
+                <img src="ChatGPT Image 13 nov 2025, 12_38_45.png" alt="Logo Cachicar" width="200">
 
-            <a href="../html/index.html">Inicio</a>
-            <a href="../html/Servicio.html">Servicios</a>
-            <a href="../html/equipo.html">Equipo</a>
-            <a href="../html/contacto.html">Contacto</a>
-        </div>    
-    </nav>
-</header>
+                <ul class="menu">
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="servicio.html">Servicios</a></li>
+                    <li><a href="equipo.html">Equipo</a></li>
+                    <li><a href="vehiculos.html">Vehículos</a></li>
+                    <li><a href="vender.html">Vender</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </div>    
+        </nav>
+    </header>
+
 
 <main>
     <section id="intro">
@@ -41,8 +44,8 @@
         </p>
 
         <div class="botones">
-            <a href="../html/comprar.html" class="btn-claro">Comprar coches</a>
-            <a href="../html/vender.html" class="btn-borde">Vender mi coche</a>
+            <a href="comprar.html" class="btn-claro">Comprar coches</a>
+            <a href="vender.html" class="btn-borde">Vender mi coche</a>
         </div>
     </section>
 
