--- a/vender.html
+++ b/vender.html
@@ -4,26 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vender - CACHI CAR</title>
-    <link type="text/css" rel="stylesheet" href="../css/estilo.css">
-    <link type="text/css" rel="stylesheet" href="../css/vender.css">
+    <link rel="stylesheet" href="estilo.css">
     <link rel="icon" href="../img/ChatGPT Image 13 nov 2025, 12_38_45.png" type="Image">
 </head>
 <body>
 
-<header>  
-    <nav>
-        <div class="div_del_header">
-            <a href="../html/index.html">
+    <header>  
+        <nav>
+            <div class="div_del_header">
                 <img src="../img/ChatGPT Image 13 nov 2025, 12_38_45.png" alt="LOGO" width="200">
-            </a>
 
-            <a href="../html/index.html">Inicio</a>
-            <a href="../html/Servicio.html">Servicios</a>
-            <a href="../html/equipo.html">Equipo</a>
-            <a href="../html/contacto.html">Contacto</a>
-        </div>    
-    </nav>
-</header>
+                <ul class="menu">
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="servicio.html">Servicios</a></li>
+                    <li><a href="equipo.html">Equipo</a></li>
+                    <li><a href="vehiculos.html">Vehículos</a></li>
+                    <li><a href="vender.html">Vender</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </div>    
+        </nav>
+    </header>
+
 
 <main>
     <section id="intro">
